in CandidateValidator class and StreamPractice class simplified several methods